# WinOperationAuto

./: .gitignore  CMakeLists.txt  README.md  WinOpAutoMouseKeybdtest.manifest
src/: LLM_prompts.json  event_logger.cpp  event_logger.h  input_cleaner.py  input_injection.cpp  input_injection.h  main.cpp  process_input.py  special_keys.cpp  special_keys.h  suggestion_overlay.cpp  suggestion_overlay.h  system_prompt.md
test/: LLM_config.json  input_cleaner.py  llm_handler.py
